<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.view.SignUpActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="회원 가입"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_signup_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_signup_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_signup_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/et_signup_password_check"
        app:layout_constraintTop_toTopOf="@id/tv_signup_name_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_signup_name_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingHorizontal="8dp"
        android:text="@string/name_rules"
        android:textColor="@color/orange_FF3F00"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/et_signup_name"
        app:layout_constraintTop_toBottomOf="@id/et_signup_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_signup_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/e_mail_address"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_name_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_signup_e_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_signup_email_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/et_signup_password_check"
        app:layout_constraintTop_toTopOf="@id/tv_signup_email_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_signup_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_email_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_signup_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_signup_password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/et_signup_password_check"
        app:layout_constraintTop_toTopOf="@id/tv_signup_password_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_signup_password_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingHorizontal="8dp"
        android:text="@string/password_rules"
        android:textColor="@color/orange_FF3F00"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/et_signup_password"
        app:layout_constraintTop_toBottomOf="@id/et_signup_password" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_signup_password_check_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/password_check"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_password_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_signup_password_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:imeOptions="actionNone"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_signup_password_check_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_signup_password_check_text"
        app:layout_constraintTop_toTopOf="@+id/tv_signup_password_check_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_signup_password_check_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingHorizontal="8dp"
        android:text="@string/password_check_rules"
        android:textColor="@color/orange_FF3F00"
        android:textSize="11sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/et_signup_password_check"
        app:layout_constraintTop_toBottomOf="@id/et_signup_password_check" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup_sign_up"
        style="@style/ThemeOverlay.Material3.Button.TextButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:imeOptions="actionNext"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_password_check_rules" />

</androidx.constraintlayout.widget.ConstraintLayout>